--- a/Resources/library.bib
+++ b/Resources/library.bib
@@ -28,3 +28,34 @@
  urldate = {2025-03-25},
  year = {1971}
 }
+
+@book{SteinShack4,
+ ISBN = {9780691113876},
+ URL = {http://www.jstor.org/stable/j.ctvcm4hpw},
+ abstract = { This is the fourth and final volume in the Princeton Lectures in Analysis, a series of textbooks that aim to present, in an integrated manner, the core areas of analysis. Beginning with the basic facts of functional analysis, this volume looks at Banach spaces, Lp spaces, and distribution theory, and highlights their roles in harmonic analysis. The authors then use the Baire category theorem to illustrate several points, including the existence of Besicovitch sets. The second half of the book introduces readers to other central topics in analysis, such as probability theory and Brownian motion, which culminates in the solution of Dirichlet's problem. The concluding chapters explore several complex variables and oscillatory integrals in Fourier analysis, and illustrate applications to such diverse areas as nonlinear dispersion equations and the problem of counting lattice points. Throughout the book, the authors focus on key results in each area and stress the organic unity of the subject.    A comprehensive and authoritative text that treats some of the main topics of modern analysis  A look at basic functional analysis and its applications in harmonic analysis, probability theory, and several complex variables  Key results in each area discussed in relation to other areas of mathematics  Highlights the organic unity of large areas of analysis traditionally split into subfields  Interesting exercises and problems illustrate ideas  Clear proofs provided   },
+ author = {Elias M. Stein and Rami Shakarchi},
+ publisher = {Princeton University Press},
+ title = {Functional Analysis: Introduction to Further Topics in Analysis},
+ urldate = {2025-05-27},
+ year = {2011}
+}
+
+@book{SteinShack1,
+ ISBN = {9780691113845},
+ URL = {https://press.princeton.edu/books/hardcover/9780691113845/fourier-analysis?srsltid=AfmBOopLPAChJZvcQrUC7M_XRkDZpVujoz7WUIW2HZ3bRi0e4QMHX0Js},
+ abstract = {This first volume, a three-part introduction to the subject, is intended for students with a beginning knowledge of mathematical analysis who are motivated to discover the ideas that shape Fourier analysis. It begins with the simple conviction that Fourier arrived at in the early nineteenth century when studying problems in the physical sciences—that an arbitrary function can be written as an infinite sum of the most basic trigonometric functions.
+
+
+The first part implements this idea in terms of notions of convergence and summability of Fourier series, while highlighting applications such as the isoperimetric inequality and equidistribution. The second part deals with the Fourier transform and its applications to classical partial differential equations and the Radon transform; a clear introduction to the subject serves to avoid technical difficulties. The book closes with Fourier theory for finite abelian groups, which is applied to prime numbers in arithmetic progression.
+
+
+In organizing their exposition, the authors have carefully balanced an emphasis on key conceptual insights against the need to provide the technical underpinnings of rigorous analysis. Students of mathematics, physics, engineering and other sciences will find the theory and applications covered in this volume to be of real interest.
+
+
+The Princeton Lectures in Analysis represents a sustained effort to introduce the core areas of mathematical analysis while also illustrating the organic unity between them. Numerous examples and applications throughout its four planned volumes, of which Fourier Analysis is the first, highlight the far-reaching consequences of certain ideas in analysis to other fields of mathematics and a variety of sciences. Stein and Shakarchi move from an introduction addressing Fourier series and integrals to in-depth considerations of complex analysis; measure and integration theory, and Hilbert spaces; and, finally, further topics such as functional analysis, distributions and elements of probability theory.},
+ author = {Elias M. Stein and Rami Shakarchi},
+ publisher = {Princeton University Press},
+ title = {Functional Analysis: Introduction to Further Topics in Analysis},
+ urldate = {2025-05-27},
+ year = {2003}
+}
