--- a/Sections/poisson-kernels.tex
+++ b/Sections/poisson-kernels.tex
@@ -1,11 +1,330 @@
-In order to define the Poisson kernel
+In this chapter, I will go through the necessary preliminaries to understand the main result concerning the Dirichlet problem introduced in Chapter \ref{ch:3}. In order to understand that, one needs to be familiar with certain mathematical constructs. Most importantly, Fourier transforms and harmonic functions. These provide us with the tools that are used first to define the objective of having a function that solves the PDE, in this case Laplace's equation, within the half space in a way that it converges towards some desired functions at the boundary of the half space.
 
-%\begin{definition}[Summability to $L$]\label{def:mean_of_int}
-%    A function $f$ is said to be $M$-summable to $L$, if $\lim_{\epsilon\rightarrow0}M_{\epsilon,\Phi}(x)=L$, where
-%
-%    \begin{equation*}
-%        M_{\epsilon,\Phi}(f)=M_{\epsilon}(f)=\int_{\RR^n}\Phi(\epsilon x)f(x)dx
-%    \end{equation*}
+For this purpose, I will go through the derivation of a Poisson kernel, which is a special type of function that has the property of solving Laplace's equation and acting as an approximate identity with respect to convolution.
 
-%    \noindent where $\Phi\in C_0$ and $\Phi(0)=1$. Then $M_\epsilon(f)$ is called the $\Phi$-mean of the integral.
-%\end{definition}
+\section{Fourier Transform}
+
+The study of harmonic functions requires the use of the Fourier transforms in many situations. The Fourier transform has many desirable properties that can be used in the analysis. One of those is that, by the use of the Fourier transformation, it is possible to convert differential operators into algebraic expressions, and then recover the original function via the inverse transform. This greatly eases the analysis of many PDEs, where it can be easier to manipulate algebraic expressions than differential ones. More generally, it is sometimes easier to manipulate certain expressions in the Fourier space and then transform them back to the original form to obtain the result in the desired form.
+
+The results that prove these properties, among many others, are fundamental in the area of Fourier analysis. However, in this chapter, I will be concentrating especially on using the Fourier transform to transform specific functions that turn out to have very special properties concerning the class of harmonic functions. The class of harmonic functions\textemdash those functions that solve the Laplace equation $\Delta u=0$\textemdash  in the half-space $\RR_+^{n+1}=\{(x_1,x_2,\ldots,x_n,y)|x_i\in\RR\text{ for all }i\in\{1,2,\ldots,n\}, y\in\RR_+\}$ can be represented explicitly using Poisson kernels. Obtaining such an object requires the Fourier transform of another particular function. This will then allow recovery of a function from its boundary values $f(x)=u(x,0)$. Using the Poisson kernel, we can generate a solution by convolving it with the function $f$. This will yield a harmonic extension into the half-space.
+
+Let's start by defining the Fourier transform in the $L^1$-space.
+
+\begin{definition}[Fourier Transform in $L^1$]
+    If $f\in L^1(\RR^n)$ the Fourier transform of $f$ is the function $\hat{f}$ defined by 
+    \begin{equation*}
+        \hat{f}(\xi)=\int_{\RR^n}f(x)e^{-2\pi i x\cdot \xi}dx
+    \end{equation*}
+    for all $\xi\in\RR^n$. I will also occasionally denote the Fourier transform by $\hat{f}(\xi)=\mathcal{F}[f](\xi)$.
+\end{definition}
+
+The definition of a Fourier transformation does not yet guarantee any particular properties for the transformation $\hat{f}$. However, results exist for this purpose. One of the most prominent is called the Riemann-Lebesgue lemma, which gives a quite sharp characterization of the Fourier transform of a $L^1$-function. It establishes that the transformation does, in fact, enjoy very good regularity properties with regard to the continuity and the decay of the tail of the transformation.
+
+\begin{lemma}[Riemann-Lebesgue Lemma]
+    Suppose $f\in L^1(\RR^n)$. Then $\lim_{n\rightarrow\xi}\hat{f}(\xi)=0$ and $\hat{f}\in C_0(\RR^n)$.
+\end{lemma}
+\begin{proof}
+    Let $\alpha(\xi)=\frac{\xi}{2|\xi|^2}$. Then by Euler's identity
+    \begin{equation*}
+        1=-e^{\pi i}=-e^{\pi i2\alpha(\xi)\cdot\xi}
+    \end{equation*}
+    holds. Now for $\xi\neq0$, the previous identity substituted into the Fourier transformation of $f\in L^1(\RR^n)$ gives
+    \begin{align*}
+        \hat{f}(\xi) &= \int_{\RR^n}f(x)e^{-2\pi i x\cdot \xi }dx\\
+        &= \int_{\RR^n}f(x)e^{-2\pi i x\cdot \xi }(-e^{\pi i2\alpha(\xi)\cdot\xi})dx \\
+        &= -\int_{\RR^n}f(x)e^{-2\pi i (x-\alpha(\xi))\cdot \xi }dx \\
+        &=-\int_{\RR^n}f(x+\alpha(\xi))e^{-2\pi i x\cdot\xi}dx
+    \end{align*}
+    which allows for rewriting the transformation. By using identity $\hat{f}(\xi)=\frac{\hat{f}(\xi)+\hat{f}(\xi)}{2}$ the Fourier transform is now
+    \begin{align*}
+        \hat{f}(\xi) &= \frac{1}{2}\left(\int_{\RR^n}f(x)e^{-2\pi i x\cdot \xi }dx-\int_{\RR^n}f(x+\alpha(\xi))e^{-2\pi i x\cdot\xi}dx\right) \\
+        &=\frac{1}{2}\int_{\RR^n}(f(x)-f(x+\alpha(\xi)))e^{-2\pi i x\cdot\xi}dx.
+    \end{align*}
+    This gives a following bound for $\hat{f}$
+    \begin{equation*}
+        |\hat{f}(\xi)|\leq||f-f(\cdot+\alpha(\xi))||_1\xrightarrow{\xi\rightarrow\infty}0
+    \end{equation*}
+    concluding the proof.
+\end{proof}
+
+The result ensures that the integral in the Fourier transform converges, and therefore that the resulting function $\hat{f}$ behaves well enough to be integrable.  
+
+It is possible to generalize these results to other spaces as well. However, that would, in some cases, such as defining the Fourier transform in $L^2$, require not only coming up with a proof that allows a wider class of functions but also redefining the whole transform. Having the result in $L^1$ will suffice for now.
+
+\section{Poisson Kernel}
+
+Now we can use the Fourier transform to establish further results that are needed to analyze the problem of extending a function to $\RR_+^ {n+1}$. The first step is to derive the Fourier transform of a Gaussian function and notice that it transforms it into another Gaussian function.
+
+\begin{theorem}[Fourier Transform of a Gaussian Function]\label{thm:fourier-gaussian}
+    For all $\alpha>0$ the following holds
+    \begin{equation*}
+        \int_{\RR^n}e^{-\pi\alpha|y|^2}e^{-2\pi i\xi\cdot y}dy=\alpha^{-\frac{n}{2}}e^{-\pi\frac{|\xi|^2}{\alpha}}
+    \end{equation*}
+    This says that the Gaussian function is its own Fourier transform.
+\end{theorem}
+\begin{proof}
+    In this case, the integral can be transformed to correspond to the one-dimensional case by noticing that for $y,\xi\in\RR^n$ holds:
+    \begin{align*}
+        e^{-\pi\alpha|y|^2}e^{-2\pi i\xi\cdot y}&=e^{-\pi\alpha\sum_{j=1}^ny_j^2}e^{-2\pi i\sum_{j=1}^n\xi_jy_j} \\
+        &=e^{-\pi\alpha y_1^2}e^{-\pi\alpha y_2^2}\ldots e^{-\pi\alpha y_n^2}e^{-2\pi i\xi_1y_1}e^{-2\pi i\xi_2y_2}\ldots e^{-2\pi i\xi_ny_n}\\
+        &=\prod_{j=1}^ne^{-\pi\alpha y_j^2}\prod_{j=1}^ne^{-2\pi i\xi_jy_j} \\
+        &=\prod_{j=1}^ne^{-\pi\alpha y_j^2-2\pi i\xi_jy_j}
+    \end{align*}
+    Now the problem can be approached as a product of one-dimensional integrals. In each of these integrals, the term $-\pi\alpha y_j^2-2\pi i\xi_jy_j$ can be completed as a square. The term can be written as:
+    \begin{gather*}
+        -\pi\alpha y_j^2-2\pi i\xi_jy_j=-\pi\alpha\left(y_j^2+\frac{2i\xi_j}{\alpha} \right)
+    \end{gather*}
+    and its completed square gives:
+    \begin{align*}
+        -\pi\alpha y_j^2-2\pi i\xi_jy_j&=-\pi\alpha\left(\left(y_j+\frac{i\xi_j}{\alpha}\right)^2-\left(\frac{i\xi_j}{\alpha}\right)\right) \\
+        &=-\pi\alpha\left(y_j+\frac{i\xi_j}{\alpha}\right)^2-\pi\frac{\xi_j^2}{\alpha}
+    \end{align*}
+    Therefore, we can denote the integral as $I_j(\xi_j)=e^{-\frac{\pi \xi_j^2}{\alpha}}\int_{-\infty}^\infty e^{-\pi\alpha\left(y_j+\frac{i\xi_j}{\alpha}\right)^2}dy_j$. Now it is possible to do a change of variable so that $u_j=y_j+\frac{i\xi_j}{\alpha}$, so the integral can be written as:
+    \begin{gather*}
+        I_j(\xi_j)=e^{-\frac{\pi \xi_j^2}{\alpha}}\int_{-\infty}^\infty e^{-\pi\alpha u^2}dy_j
+    \end{gather*}
+    Now, the famous result on Gaussian integrals gives that $\int_{-\infty}^\infty e^{-x^2}dx=\sqrt{\pi}$. Applying this to $I_j(\xi_j)$ with a substitution $v^2=\alpha u^2$ and $dv=\sqrt{\alpha}du$:
+    \begin{align*}
+        \int_{-\infty}^\infty e^{-\pi\alpha u^2}du&=\frac{1}{\sqrt{\alpha}}\int_{-\infty}^\infty e^{-\pi v^2}dv \\
+        &=\frac{1}{\sqrt{\alpha}}
+    \end{align*}
+    Substituting the previous result to $I_j(\xi_j)$.
+    \begin{align*}
+        I_j(\xi_j)&=e^{-\frac{\pi \xi_j^2}{\alpha}}\int_{-\infty}^\infty e^{-\pi\alpha u^2}dy_j \\
+        &=\frac{e^{-\frac{\pi \xi_j^2}{\alpha}}}{\sqrt{\alpha}}
+    \end{align*}
+    And then using $I_j(\xi_j)$ to solve the integral given in the statement:
+    \begin{align*}
+        \int_{\RR^n}e^{-\pi\alpha|y|^2}e^{-2\pi i\xi\cdot y}dy&=\prod_{j=1}^n\int_{-\infty}^\infty e^{-\pi\alpha y_j^2-2\pi i\xi_jy_j} \\
+        &=\prod_{j=1}^n I_j(\xi_j) \\
+        &=\prod_{j=1}^n\frac{e^{-\frac{\pi \xi_j^2}{\alpha}}}{\sqrt{\alpha}} \\
+        &=\alpha^{-\frac{n}{2}}e^{-\frac{\pi}{\alpha}\sum_{j=1}^n\xi_j^2} \\
+        &=\alpha^{-\frac{n}{2}}e^{-\frac{\pi|\xi|^2}{\alpha}}
+    \end{align*}
+    Which concludes the proof, as it is the claimed Fourier transformation of a Gaussian function.
+\end{proof}
+
+This result can now be used to derive the Poisson kernel, as a Fourier transform of a $e^{-\epsilon|x|}$.
+
+\begin{theorem}[Poisson Kernel]\label{thm:poisson-kernel}
+    For all $\alpha>0$ 
+    \begin{align*}
+        \int_{\RR^{n}}e^{-2\pi\alpha|y|}e^{-2\pi i \xi\cdot y}dy &= \frac{\frac{\Gamma\left(n+1\right)}{2}}{\pi^{\frac{n+1}{2}}}\frac{\alpha}{{(\alpha^2+|\xi|^2)}^{\frac{n+1}{2}}} \\
+        &=c_n\frac{\alpha}{{(\alpha^2+|\xi|^2)}^{\frac{n+1}{2}}}
+    \end{align*}
+\end{theorem}
+\begin{proof}
+    This theorem holds without the loss of generality when we take $\alpha=1$ due to the scaling property of the Fourier transform. For the Fourier transform holds $f(\alpha x)\xLeftrightarrow{\mathcal{F}}\frac{1}{|\alpha|}\hat{f}\left(\frac{\xi}{\alpha}\right)$ so it is always possible to scale the $y$ by $\frac{1}{\alpha}$, which gets of the alpha in the integral. Now let's establish the following auxiliary result.
+    \begin{gather}\label{eq:poisson-kernel1}
+        e^{-\beta}=\frac{1}{\sqrt{\pi}}\int_0^\infty \frac{e^{-u}}{\sqrt{u}}e^{-\frac{\beta^2}{4u}}du
+    \end{gather}
+    To prove this, let's establish some other integral identities.
+    \begin{gather*}
+        \frac{1}{1+x^2}=\int_0^\infty e^{-(1+x^2)u}du
+    \end{gather*}
+    This follows straight from the definition of the integral for the exponential function. The second result is not as straightforward. 
+    \begin{equation*}
+        e^{-\beta}=\frac{2}{\pi}\int_0^\infty\frac{\cos{\beta x}}{1+x^2}
+    \end{equation*}
+    The idea is to use the residue theorem on a function $f(z)=\frac{e^{i\beta z}}{1+z^2}$. As $\frac{e^{i\beta z}}{1+z^2}=\frac{e^{i\beta z}}{(z+i)(z-i)}$, the function has two poles at $z=\pm i$. Now let $\beta>0$ and $\Gamma_R$ be the contour consisting of the real line from $[-R,R]$ and the upper semicircle $C_R$ of radius $R$ centered at $0$. The contour integral can then be represented as sum of these parts.
+    \begin{equation*}
+        I_R=\oint_{\Gamma_R}f(z)dz=\int_{-R}^Rf(z)dz+\int_{C_R}f(z)dz
+    \end{equation*}
+    By the residue theorem, as the only pole inside the upper contour is at $z=i$, $I_R=2\pi i\text{Res}_{z=i}f(z)$. Since it is the only pole $\text{Res}_{z=i}f(z)=\lim_{z\rightarrow i}(z-i)\frac{e^{i\beta z}}{(z+i)(z-i)}=\frac{e^{-\beta}}{2i}$ and thus the integral evaluates to $I_R=2\pi i \frac{e^{-\beta}}{2}=\pi e^{-\beta}$. The arc integral will vanish as $R\rightarrow\infty$, since on the arc $C_R$, $z=Re^{i\theta}$, for $\theta\in[0,\pi]$ and $|f(z)|=\frac{|e^{i\beta z}|}{|1+z^2|}\leq\frac{1}{R^2-1}$ as $|z^2+1|\geq|z|^2-1=R^2-1$ and for the numerator, the $z$ can be substituted to obtain a bound.
+    \begin{align*}
+        |e^{i\beta z}|&=|e^{i\beta Re^{i\theta}}|\\
+        &=e^{i\beta R(\cos{\theta}+i\sin{\theta})}|\\
+        &=|e^{i\beta R\cos{\theta}-\beta R\sin{\theta}}| \\
+        &=|e^{i\beta R\cos{\theta}}||e^{-\beta R\sin{\theta}}|\\
+        &=e^{-\beta R\sin{\theta}} \\
+        &\leq 1
+    \end{align*}
+    This gives an upper bound for the arc integral as follow.
+    \begin{gather*}
+        |\int_{C_R}f(z)dz|\leq\pi R\max_{z\in C_R}|f(z)|=\frac{\pi R}{R^2-1}
+    \end{gather*}
+    Now the limit as $R\rightarrow\infty$ is
+    \begin{gather*}
+        \lim_{R\rightarrow\infty}\frac{\pi R}{R^2-1}=0
+    \end{gather*}
+    Assembling the original integral back together, the result comes out as:
+    \begin{gather*}
+        \int_{-\infty}^\infty \frac{e^{i\beta z}}{1+z^2}=\pi e^{\beta}
+    \end{gather*}
+    Since $\Re{e^{i\beta z}}=\cos{\beta z}$ the integral can be written:
+    \begin{gather*}
+        2\int_0^\infty\frac{\cos{\beta x}}{1+x^2}dx=\pi e^{-\beta} \\
+        \Leftrightarrow e^{-\beta} = \frac{2}{\pi}\int_0^\infty\frac{\cos{\beta x}}{1+x^2}dx
+    \end{gather*}
+    Using these two, the first identity can now be proven.
+    \begin{align*}
+        e^{-\beta}&=\frac{2}{\pi}\int_0^\infty\frac{\cos{\beta x}}{1+x^2}dx \\
+        &=\frac{2}{\pi}\int_0^\infty \cos{\beta x}\left(\int_0^\infty e^{u}e^{-ux^2}du\right) dx \\
+        &=\frac{2}{\pi}\int_0^\infty e^{-u}\left(\int_0^\infty e^{-ux^2}\cos{\beta x}dx \right)du \\
+        &=\frac{2}{\pi}\int_0^\infty e^{-u}\left(\frac{1}{2}\int_0^\infty e^{ux^2}e^{i\beta x}dx \right)du \\
+        &=\frac{2}{\pi}\int_0^\infty e^{-u}\left(\pi\int_{-\infty}^\infty e^{4\pi^2uy^2}e^{-2\pi i\beta y}dy\right)du \\
+        &=\frac{2}{\pi}\int_0^\infty \frac{\sqrt{\pi}e^{-u}e^{-\frac{beta^2}{4u}}}{2\sqrt{u}}du \\
+        &=\frac{1}{\sqrt{\pi}}\int_0^\infty \frac{e^{-u}}{\sqrt{u}}e^{-\frac{\eta^2}{4u}}du
+    \end{align*}
+    Which combines the two identities.
+    
+    The Poisson kernel itself is then derived using the integrals given before, and Theorem \ref{thm:fourier-gaussian}, we can compute the integral as follows.
+    \begin{align*}
+        \int_{\RR^{n}}e^{-2\pi\alpha|y|}e^{-2\pi i \xi\cdot y}dy&=\int_{\RR^n}\left(\frac{1}{\sqrt{\pi}}\int_0^\infty \frac{e^{-u}}{\sqrt{u}}e^{-\frac{4\pi^2|y|^2}{4u}}du\right)e^{-2\pi i \xi\cdot y}dy \\
+        &=\frac{1}{\sqrt{\pi}}\int_0^\infty\frac{e^{-u}}{\sqrt{u}}\left(\int_{\RR^n} e^{-\frac{4\pi^2|y|^2}{4u}}e^{-2\pi i \xi\cdot y}dy\right)du \\
+        &=\frac{1}{\sqrt{\pi}}\int_0^\infty\frac{e^{-u}}{\sqrt{u}}\left(\sqrt{\frac{u}{\pi}}^ne^{-u|\xi|^2}\right)du \\
+        &=\frac{1}{\pi^{\frac{n+1}{2}}}\int_0^\infty e^{-u}u^{\frac{n-1}{2}}e^{-u|\xi|^2} \\
+        &=\frac{1}{\pi^{\frac{n+1}{2}}}\frac{1}{(1+|\xi|^2)^{\frac{n+1}{2}}}\int_0^\infty e^{-s}s^{\frac{n-1}{2}}ds \\
+        &=\frac{\Gamma\left(\frac{n+1}{2}\right)}{\pi^{\frac{n+1}{2}}}\frac{1}{(1+|\xi|^2)^{\frac{n+1}{2}}}
+    \end{align*}
+    This gives the formulation of the Poisson kernel in the half-space $\RR_+^{n+1}$.
+\end{proof}
+
+The Fourier transform of the function $e^{-2\pi\alpha|y|}$ constitutes the Poisson kernel, and it will be denoted by $P(x,y)=c_ny(y^2+|x|^2)^{-\frac{n+1}{2}}$. Also, the first transformation has a name: Weierstrass kernel, which is usually denoted by $W(x,y)$, analogous to the Poisson kernel. However, the Poisson kernel is in focus for the remainder of the thesis. Key properties it has are the harmonicity and smoothness. In addition, the Poisson is a ``good kernel'' \cite{SteinShack1}. Good kernels have some good properties with respect to the convolution operation. Namely, those can be interpreted as approximate identities with respect to convolution.
+
+\begin{definition}[Convolution]
+    Let $f$ and $g$ be functions, then $f*g$ is defined as the following integral transform:
+    \begin{equation*}
+        (f*g)(x)=\int_{\RR^n}f(x-t)g(t)dt
+    \end{equation*}
+\end{definition}
+This definition and some results on it will be used later in the analysis of the boundary value problem in Chapter \ref{ch:3}.
+
+In order for a kernel to qualify as a good kernel, it must satisfy the following conditions.
+
+\begin{definition}[Good Kernel]\label{def:goodkernel}
+    Let $\{K_y(x)\}_{y>0}\subset L^1(\RR^n)$ be a family of functions. This family is called the family of good kernels if it fulfills three conditions.
+    \begin{enumerate}
+        \item \begin{equation*}
+            \int_{\RR^n}K_y(x)dx =1
+        \end{equation*}
+        \item For all $y>0$ and all $x\in\RR^n$, $K_y(x)>0$.
+        \item For all $\delta>0$ holds
+        \begin{equation*}
+            \lim_{y\rightarrow0}\int_{\{x\in\RR^n|\,|x|>\delta\}}K_y(x)=0
+        \end{equation*}
+    \end{enumerate}
+\end{definition}
+
+Good kernels are an important concept for the following analysis, as they act as an approximate identity with respect to a convolution. When a function in $L^p$ space is convolved with a good kernel, this resembles averaging the function in the area close to a point. As the kernel integrates into one and its tails diminish the further from the origin $x$ gets. The next lemma will show that the Poisson kernel belongs to this class of kernels.
+
+\begin{lemma}[Poisson Kernel is a Good Kernel]
+    Poisson kernels are a family of good kernels.
+\end{lemma}
+\begin{proof}
+    The first part can be shown to hold by integrating the kernel. First let's change to spherical coordinates so that $r=|x|$ and $dx=\omega_nr^{n-1}dr$, where $\omega_n$ is the surface are of the unit sphere in $\RR^{n+1}$. Then the integral can be written as:
+    \begin{equation*}
+        \int_{\RR^n}P(x,y)dx=c_ny\omega_{n-1}\int_0^\infty\frac{r^{n-1}dr}{(y^2+r^2)^{\frac{n+1}{2}}}
+    \end{equation*}
+    Then letting $r=yt$ gives
+    \begin{align*}
+        c_ny\omega_{n-1}\int_0^\infty\frac{r^{n-1}dr}{(y^2+r^2)^{\frac{n+1}{2}}}&=c_ny\omega_{n-1}\int_0^\infty\frac{y^{n}t^{n-1}dt}{(y^2+y^2t^2)^{\frac{n+1}{2}}} \\
+        &=c_n\omega_{n-1}\int_0^\infty \frac{t^{n-1}dt}{(t^2+1)^{\frac{n+1}{2}}}
+    \end{align*}
+    and again, substituting $t=\tan\theta$ gives
+    \begin{align*}
+        c_n\omega_{n-1}\int_0^\infty \frac{t^{n-1}dt}{(t^2+1)^{\frac{n+1}{2}}}&=c_n\omega_{n-1}\int_0^\frac{\pi}{2} \frac{\tan^{n-1}\theta\sec^2\theta d\theta}{(\tan^2\theta+1)^{\frac{n+1}{2}}} \\
+        &=c_n\omega_{n-1}\int_0^\frac{\pi}{2} \frac{\tan^{n-1}\theta\sec^2\theta d\theta}{\sec^{n+1}\theta} \\
+        &=c_n\omega_{n-1}\int_0^\frac{\pi}{2} \frac{\tan^{n-1}\theta d\theta}{\sec^{n-1}\theta} \\
+        &=c_n\omega_{n-1}\int_0^\frac{\pi}{2}\sin^{n-1}\theta d\theta
+    \end{align*}
+    Now the $\omega_{n-1}\sin^{n-1}\theta$ is the surface are of a sphere with radius $\sin\theta$ in the half space, so
+    \begin{equation*}
+        \omega_{n-1}\int_0^\frac{\pi}{2}\sin^{n-1}\theta d\theta=\frac{\omega_n}{2}
+    \end{equation*}
+    Also, the $c_n^{-1}$ is equal to half of the surface area of a $n$-dimensional sphere; these two cancel out and leave 1 as a result. 
+
+    The second condition follows directly from the definition of the Poisson kernel.
+
+    Lastly, the third condition also requires integrating the expression. Let's use the first part to write the integral in polar coordinates. In what follows, let $\delta>0$.
+    \begin{equation*}
+        \int_{\RR^n}P(x,y)dx=c_ny\omega_{n-1}\int_0^\infty\frac{r^{n-1}dr}{(y^2+r^2)^{\frac{n+1}{2}}}
+    \end{equation*}
+    The following observation about the numerator inside the integral $y^2+r^2\geq r^2$, enables the use of inequality for the integral.
+    \begin{align*}
+        c_ny\omega_{n-1}\int_\delta^\infty\frac{r^{n-1}dr}{(y^2+r^2)^{\frac{n+1}{2}}}&\leq c_ny\omega_{n-1}\int_\delta^\infty\frac{r^{n-1}dr}{r^{n+1}} \\
+        &=c_ny\omega_{n-1}\int_\delta^\infty\frac{dr}{r^{2}} \\
+        &=-c_ny\omega_{n-1}\left[\frac{1}{r}\right]_\delta^\infty \\
+        &=\frac{c_ny\omega_{n-1}}{\delta}
+    \end{align*}
+    Now, taking the limit shows the claim for any $\delta>0$.
+    \begin{equation*}
+        \lim_{y\rightarrow0}\frac{c_ny\omega_{n-1}}{\delta}=0
+    \end{equation*}
+\end{proof}
+
+As the Poisson kernel satisfies all of the criteria for good kernels, it can also be interpreted as a kind of an average close to a point. Moreover, it turns out that as the $y$ goes to zero, the convolution of a function in $L^p$ will converge towards the function against which it is convolved.
+
+\begin{comment}
+\begin{lemma}
+    If $f\in L^p(\RR^n)$, then $P(\cdot,y)*f$ converges to $f$ in $L^p(\RR^n)$.
+\end{lemma}
+\begin{proof}
+    As $C^\infty_0(\mathbb R^n)$ is dense with respect to $L^p(\mathbb R^n)$, exists a function $f_\epsilon\in C^\infty_0(\mathbb R^n)$ such that for any $\epsilon>0$ holds $\|f-f_\epsilon\|_{L^p(\mathbb R^n)}<\epsilon$.
+    For $y>0$
+    \begin{align*}
+        (f*P(\cdot,y))(x)-f(x)&=\int_{\RR^n}f(x-t)P(t,y)dt-\int_{\RR^n}f(x)P(t,y)dt \\
+        &=\int_{\RR^n}(f(x-t)-f(x))P(t,y)dt
+    \end{align*}
+    So the norm of this can be estimated, and by Minkowski's integral inequality:
+    \begin{align*}
+        \|f*P-f\|&=\left(\int_{\RR^n}\left|\int_{\RR^n}(f(x-t)-f(x))P(t,y)dt\right|^pdx\right)^{\frac{1}{p}} \\
+        &\leq\int_{\RR^n}\left(\int_{\RR^n}|(f(x-t)-f(x))|^pdx\right)^{\frac{1}{p}}P(t,y)dt
+    \end{align*}
+\end{proof}
+\end{comment}
+
+\section{Laplace Equation and Harmonicity}
+
+\begin{definition}[Laplace's equation]
+    Laplace's equation is a second-order PDE
+    \begin{equation*}
+        \Delta u=\nabla\cdot\nabla u=\sum_{n=1}^n\frac{\partial^2u}{\partial x_i^2}=0.
+    \end{equation*}
+\end{definition}
+
+\begin{definition}[Harmonic Functions]
+    Functions that solve Laplace's equation are called harmonic.
+\end{definition}
+
+To check that the Poisson kernel is a harmonic function, it is possible just straightforwardly to calculate the second derivatives for it. The first derivatives of Poisson kernel are:
+\begin{gather*}
+    \frac{\partial P(x,y)}{\partial x_i}=-c_n\frac{(n+1)yx_i}{(y^2+|x|^2)^{\frac{n+3}{2}}}\quad\text{and}\\
+    \frac{\partial P(x,y)}{\partial y}=c_n\left(\frac{1}{(y^2+|x|^2)^{\frac{n+1}{2}}}-\frac{(n+1)y^2}{(y^2+|x|^2)^{\frac{n+3}{2}}}\right)
+\end{gather*}
+
+\noindent and the second derivatives are:
+
+\begin{align}\label{eq:d2dx2P}
+\begin{split}
+    \frac{\partial^2 P(x,y)}{\partial x_i^2}&=-c_n(n+1)y\frac{\partial}{\partial x_i}\left(\frac{x_i}{(y^2+|x|^2)^{\frac{n+3}{2}}}\right) \\
+    &=-c_n(n+1)y\left(\frac{1}{(y^2+|x|^2)^{\frac{n+3}{2}}}+x_i\frac{\partial}{\partial x_i}\left(\frac{1}{(y^2+|x|^2)^{\frac{n+3}{2}}}\right) \right) \\
+    &=-c_n(n+1)y\left(\frac{1}{(y^2+|x|^2)^{\frac{n+3}{2}}}+x_i\frac{-(n+3)x_i}{(y^2+|x|^2)^{\frac{n+5}{2}}}\right)\\
+    &=c_n\left(\frac{(n+1)(n+3)yx_i^2}{(y^2+|x|^2)^{\frac{n+5}{2}}}-\frac{(n+1)y}{(y^2+|x|^2)^{\frac{n+3}{2}}} \right) \quad \text{and}
+\end{split}
+\end{align}
+\begin{align}\label{eq:d2dyP}
+\begin{split}
+    \frac{\partial^2 P(x,y)}{\partial y^2}&=c_n\frac{\partial}{\partial y}\left(\frac{1}{(y^2+|x|^2)^{\frac{n+1}{2}}}-\frac{(n+1)y^2}{(y^2+|x|^2)^{\frac{n+3}{2}}}\right) \\
+    &=c_n\left(\frac{-(n+1)y}{(y^2+|x|^2)^{\frac{n+3}{2}}}-(n+1)\frac{\partial}{\partial y}\left(\frac{y^2}{(y^2+|x|^2)^{\frac{n+3}{2}}} \right) \right) \\
+    &=c_n\left(\frac{-(n+1)y}{(y^2+|x|^2)^{\frac{n+3}{2}}}-(n+1)\left(\frac{2y}{(y^2+|x|^2)^{\frac{n+3}{2}}}+y^2\frac{\partial}{\partial y}\left(\frac{1}{(y^2+|x|^2)^{\frac{n+3}{2}}}\right)\right)\right) \\
+    &=c_n\left(\frac{-(n+1)y}{(y^2+|x|^2)^{\frac{n+3}{2}}}-(n+1)\left(\frac{2y}{(y^2+|x|^2)^{\frac{n+3}{2}}}+y^2\left(\frac{(n+3)y}{(y^2+|x|^2)^{\frac{n+5}{2}}}\right)\right)\right)  \\
+    &=c_n\left(\frac{(n+1)(n+3)y^3}{(y^2+|x|^2)^{\frac{n+5}{2}}}-\frac{3(n+1)y}{(y^2+|x|^2)^{\frac{n+3}{2}}} \right)
+\end{split}
+\end{align}
+
+\noindent Now, the equation \ref{eq:d2dx2P} and \ref{eq:d2dyP} can be combined to obtain the Laplacian of the Poisson kernel.
+
+\begin{align*}
+    \Delta_{x,y} P(x,y)&=\sum_{i=1}^n\frac{\partial^2P(x,y)}{\partial x_i^2}+\frac{\partial^2P(x,y)}{\partial y^2} \\
+    &=\sum_{i=1}^nc_n\left(\frac{(n+1)(n+3)yx_i^2}{(y^2+|x|^2)^{\frac{n+5}{2}}}-\frac{(n+1)y}{(y^2+|x|^2)^{\frac{n+3}{2}}} \right)+ \\
+    &\quad\quad c_n\left(\frac{(n+1)(n+3)y^3}{(y^2+|x|^2)^{\frac{n+5}{2}}}-\frac{3(n+1)y}{(y^2+|x|^2)^{\frac{n+3}{2}}} \right) \\
+    &=c_n\left(\frac{(n+1)(n+3)y|x|^2}{(y^2+|x|^2)^{\frac{n+5}{2}}}-\frac{n(n+1)y}{(y^2+|x|^2)^{\frac{n+3}{2}}} \right.+\\
+    &\quad\quad \left. \frac{(n+1)(n+3)y^3}{(y^2+|x|^2)^{\frac{n+5}{2}}}-\frac{3(n+1)y}{(y^2+|x|^2)^{\frac{n+3}{2}}} \right) \\
+    &=c_n\left(\frac{(n+1)(n+3)y(y^2+|x|^2)}{(y^2+|x|^2)^{\frac{n+5}{2}}}-\frac{(n+3)(n+1)y}{(y^2+|x|^2)^{\frac{n+3}{2}}} \right) \\
+    &=c_n\left(\frac{(n+1)(n+3)y}{(y^2+|x|^2)^{\frac{n+5}{2}-1}}-\frac{(n+3)(n+1)y}{(y^2+|x|^2)^{\frac{n+3}{2}}} \right) \\
+    &=c_n\left(\frac{(n+1)(n+3)y}{(y^2+|x|^2)^{\frac{n+3}{2}}}-\frac{(n+3)(n+1)y}{(y^2+|x|^2)^{\frac{n+3}{2}}} \right) \\
+    &=0
+\end{align*}
+
+This shows that the Poisson kernel satisfies the Laplace equation with respect to $x$ and $y$, since $\Delta_{x,y}P(x,y)=0$.
